--- a/home.css
+++ b/home.css
@@ -166,7 +166,7 @@ body {
     transition: background-color 0.1s ease, box-shadow 0.1s ease; /* Smooth hover effects */
     cursor: pointer; /* Pointer cursor on hover */
     display:block;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani Regular', sans-serif;
 
     
   
@@ -255,7 +255,7 @@ body {
 .left a {
     text-decoration: none;
     color: white;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani Regular', sans-serif;
     font-size: 1.25em;
 }
 
@@ -428,7 +428,7 @@ body {
         padding-left: 15px;
         box-sizing: border-box;
         background-color: #1A1919;
-        font-family: 'Rajdhani', sans-serif;
+        font-family: 'Rajdhani Regular', sans-serif;
         border-radius: 0px;
         /* font-size: 16pt; */
     }
