--- a/home2.css
+++ b/home2.css
@@ -184,7 +184,7 @@ body {
     transition: background-color 0.1s ease, box-shadow 0.1s ease; /* Smooth hover effects */
     cursor: pointer; /* Pointer cursor on hover */
     display:block;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani Regular', sans-serif;
 
     
   
@@ -273,7 +273,7 @@ body {
 .left a {
     text-decoration: none;
     color: white;
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani Regular', sans-serif;
     font-size: 1.25em;
 }
 
@@ -308,7 +308,7 @@ body {
     padding: 2px; /* Padding for dropdown items */
     color: white; /* Text color */
     text-decoration: none; /* Remove underline */
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani Regular', sans-serif;
 }
 
 .dropdown a:hover {
@@ -430,7 +430,7 @@ body {
 
     .rect-button {
         font-size: 1.25em;
-        font-weight: bold;
+        /* font-weight: bold; */
     }
     
     .rectangle22, .rectangle23 {
@@ -464,7 +464,7 @@ body {
         padding-left: 15px;
         box-sizing: border-box;
         background-color: #1A1919;
-        font-family: 'Rajdhani', sans-serif;
+        font-family: 'Rajdhani Regular', sans-serif;
         border-radius: 0px;
         /* font-size: 16pt; */
     }
